[package]
name = "padtarust"
version = "0.1.0"
authors = ["kit <knittenkitten@pm.me>"]
edition = "2021"

[dependencies]
cortex-m = "0.7"
embedded-hal = "0.2"
imxrt-usbd = "0.2.1"
paste = "1.0"
teensy4-panic = { version = "0.2", default-features = false}
teensy4-pins = "0.3.1"
usb-device = "0.2.9"
libm = "0.2.6"
fugit = "0.3.6"
log = "0.4"
usbd-hid = "0.6.1"
usbd-serial = "0.1.1"

[dependencies.teensy4-bsp]
version = "0.4"
default-features = false
features = [
    # Use the BSP's runtime. This lets you write your
    # `main()` function.
    "rt"
]

# Don't optimize build dependencies, like proc macros.
# Helps with build times.
[profile.release.build-override]
opt-level = 0




